--- a/style.css
+++ b/style.css
@@ -1,30 +1,28 @@
-
-.myname {
-  padding: 2% 2%;
-}
-body,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
+body {
   font-family: "Montserrat", sans-serif;
-}
-.bg-img {
   background-image: url("./bg.jpg");
-  background-size: cover;
+  background-attachment: fixed;
+  background-position: center center;
   background-repeat: no-repeat;
-  height: 105vh;
+  background-size: cover;
+  min-height: 100vh;
 }
 * {
   margin: 0;
   padding: 0;
 }
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 3vh;
+  flex-direction: column;
+}
 .myname {
-  position: absolute;
-  top: 1%;
-  display: block;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 .name {
   color: #741037;
@@ -34,73 +32,49 @@ h6 {
   font-size: 20px;
 }
 .aboutme {
-  display: inline-block;
-  position: absolute;
-  top: 18%;
-  text-align: initial;
-}
-#box1 {
   display: flex;
-  border-radius: 3px 12px;
-  background: #741037;
-  padding: 20px;
-  width: 90px;
-  height: 15px;
-  font-weight: bold;
-  font-size: 17px;
-  text-align: center;
-  color: #fbf3e4;
-  align-content: space-around;
-  align-items: center;
   justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  max-width: 35%;
+  text-align: center;
+  font-weight: 450;
+  margin: 1vh;
+}
+.box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
+  color: white;
+  background: #741037;
+  width: 210px;
+  height: 56px;
+  border-radius: 50px;
+  margin: 1vh;
+}
+.myskills{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  max-width: 50%;
+  text-align: center;
+  font-weight: 450;
+  margin: 1vh;
+
+}
+.list{
+list-style: none;
+}
+.contact{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  max-width: 50%;
+  text-align: center;
+  font-weight: 450;
+  margin: 1vh;
 }
 
-#box2 {
-  display: flex;
-  border-radius: 3px 12px;
-  background: #741037;
-  padding: 20px;
-  width: 90px;
-  height: 15px;
-  font-weight: bold;
-  font-size: 17px;
-  text-align: center;
-  color: #fbf3e4;
-  align-content: space-around;
-  align-items: center;
-  justify-content: center;
-}
-#box3 {
-  display: flex;
-  border-radius: 3px 12px;
-  background: #741037;
-  padding: 20px;
-  width: 90px;
-  height: 15px;
-  font-weight: bold;
-  font-size: 13px;
-  text-align: center;
-  color: #fbf3e4;
-  align-items: center;
-  justify-content: center;
-}
-
-.myskills {
-  display: inline-block;
-  position: absolute;
-  top: 42%;
-  text-align: initial;
-}
-.contact {
-  display: inline-block;
-  position: absolute;
-  top: 77%;
-  text-align: initial;
-}
-
-.myicon {
-  display: inline-block;
-  color: #178984;
-  margin-right: 5;
-  align-content: space-around;
-}
