--- a/style.css
+++ b/style.css
@@ -1,67 +1,93 @@
+@import url("https://fonts.googleapis.com/css2?family=Dancing+Script&family=Montserrat&display=swap");
 body {
   font-family: "Montserrat", sans-serif;
-  background-image: url("./bg.jpg");
-  background-attachment: fixed;
-  background-position: center center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  min-height: 100vh;
 }
 * {
   margin: 0;
   padding: 0;
 }
-.container {
+header{
   display: flex;
-  /*justify-content: center;*/
-  align-items: flex-start;
-  margin: 3vh;
-  flex-direction: column;
+  flex-direction: row-reverse;
+  justify-content: stretch;
+  align-items: center;
+  max-width: 100%;
+  height: 80px;
+  font-size: 20px;
+  background-color:#8d8ae4 ;
+  box-shadow: 0 0 10px rgb(160, 160, 160);
 }
-.myname {
+.myname{
+ position:absolute;
+ padding: 22px;
+ color: aliceblue;
+ font-size: 20px;
+ margin: 1.5vh;
+}
+.navs{
+  margin: 1.5vh;
+}
+.home{
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   justify-content: center;
   align-items: center;
+ min-height: calc(100vh - 80px);
 }
-.name {
-  color: #741037;
+.para{
+  padding-bottom: 12px;
+  border-bottom: 1px solid #ffc219;
+  font-weight: 500;
+  padding-left: 1vh;
+  padding-right: 1vh;
+  color: #4c1d7b;
 }
-.role {
-  color: #178984;
-  font-size: 20px;
+.fpara{
+  font-size: 25px;
+}
+.spara{
+  font-size: 35px;
+}
+.img1{
+  width: 50%;
+}
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  flex-direction: column;
 }
 .aboutme {
   display: flex;
- /* justify-content: center;*/
-  align-items: flex-start;
-  flex-direction: column;
-  max-width: 35%;
+ align-items:center;
+  flex-direction: row;
+  width: 100%;
+  min-height: 70vh;
   text-align: start;
-  font-weight: 450;
-  margin: 1vh;
+  font-weight: 500;
+  color: #4c1d7b;
+  padding: 10vh;
+  background-color: #f7f8fa;
 }
-.box {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 20px;
-  color: white;
-  background: #741037;
-  width: 210px;
-  height: 56px;
-  border-radius: 50px;
-  margin: 1vh;
+.aboutpara{
+  max-width: 35%;
+}
+.title {
+  font-size: 40px;
+  color: #ffc219;
+  font-weight: 500;
+  padding-right: 4vh;
 }
 .myskills{
   display: flex;
-  /*justify-content: center;*/
-  align-items: flex-start;
-  flex-direction: column;
-  max-width: 50%;
-  text-align: start;
-  font-weight: 450;
-  margin: 1vh;
+  align-items:center;
+   flex-direction: row;
+   max-width: 35%;
+   min-height: 70vh;
+   text-align: center;
+   font-weight: 500;
+   color: #4c1d7b;
+   padding: 10vh;
 
 }
 .list{
@@ -70,12 +96,26 @@ list-style: none;
 }
 .contact{
   display: flex;
-  /*justify-content: center;*/
-  align-items: flex-start;
-  flex-direction: column;
-  max-width: 50%;
+ align-items:center;
+  flex-direction: row;
+  width: 100%;
+  min-height: 70vh;
   text-align: start;
-  font-weight: 450;
-  margin: 1vh;
+  font-weight: 500;
+  color: #4c1d7b;
+  padding: 10vh;
+  background-color: #f7f8fa;
+}
+.icons{
+  color: #4c1d7b;
+  list-style: none;
+}
+a{
+  text-decoration: none;
+  color: white;
+}
+.images{
+  width: 20vh;
+  height: 20vh;
 }
 
